<resources>
    <string name="app_name">Par ou Impar</string>
    <string name="jogador">Jogador</string>
    <string name="maquina">Máquina</string>
    <string name="x">X</string>
    <string name="escolha_da_maquina">Escolha da Máquina</string>
    <string name="par">Par</string>
    <string name="impar">Ímpar</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="restart">Restart</string>
    <string name="iniciar">Começar o jogo</string>
    <string name="winner">Você venceu!</string>
    <string name="loser">Você perdeu!</string>
</resources>
