<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_jogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/jogador"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/label_maquina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_maquina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maquina"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/label_jogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_jogador"
        app:layout_constraintTop_toTopOf="@id/label_jogador" />

    <TextView
        android:id="@+id/placar_jogador"
        android:layout_width="64dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/placar_maquina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_jogador"
        tools:text="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/placar_jogador"
        app:layout_constraintEnd_toStartOf="@id/placar_maquina"
        app:layout_constraintStart_toEndOf="@id/placar_jogador"
        app:layout_constraintTop_toTopOf="@id/placar_jogador" />

    <TextView
        android:id="@+id/placar_maquina"
        android:layout_width="64dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/placar_jogador"
        app:layout_constraintTop_toTopOf="@id/placar_jogador"
        tools:text="1" />

    <LinearLayout
        android:id="@+id/linearLayout_vencedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_escolhas"
        app:layout_constraintTop_toBottomOf="@id/placar_jogador">

        <TextView
            android:id="@+id/label_escolha_maquina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/escolha_da_maquina"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_escolha_maquina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="60sp"
            tools:text="3" />

        <TextView
            android:id="@+id/textView_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorBlue"
            android:textSize="24sp"
            tools:text="Você venceu!" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_escolhas"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/button_par">

        <Button
            android:id="@+id/button_escolha_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_escolha_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_escolha_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_escolha_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_escolha_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <Button
        android:id="@+id/button_par"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorBlue"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/par"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_impar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_impar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorBlue"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/impar"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_par" />

</androidx.constraintlayout.widget.ConstraintLayout>